# pathfinder

./: .gitignore  .prettierignore  .prettierrc  README.md  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  turbo.json
.changeset/: angry-penguins-sell.md  big-maps-know.md  bright-toys-complain.md  clean-cycles-rush.md  clever-games-yawn.md  config.json  curly-snakes-fail.md  dry-jokes-marry.md  empty-planets-doubt.md  few-hotels-cover.md  fifty-games-grow.md  five-bananas-fry.md  flat-kiwis-tap.md  fluffy-horses-reply.md  fresh-rockets-fetch.md  great-parrots-hope.md  happy-pens-try.md  heavy-stingrays-sparkle.md  late-drinks-look.md  long-cobras-peel.md  many-geckos-reflect.md  metal-seahorses-speak.md  nasty-boats-complain.md  neat-moles-vanish.md  new-walls-accept.md  ninety-clocks-compare.md  ninety-zebras-shout.md  odd-glasses-invite.md  orange-onions-build.md  poor-spoons-share.md  shy-beans-pump.md  shy-hairs-repair.md  silver-weeks-complain.md  sixty-squids-learn.md  slow-bees-yell.md  soft-worms-add.md  sour-shirts-report.md  strong-cows-remain.md  swift-trains-flash.md  tasty-ducks-study.md  (+7 more)
.github/workflows/: ci.yml  code_quality.yml  release.yml  type-check.yml
apps/desktop/: .gitignore  bun.lockb  index.html  package.json  tsconfig.json  vite-env.d.ts  vite.config.ts  vite.config.ts.timestamp-1695227053801-99920853cf8b2.mjs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/graphql-yoga-server/: constants.ts  index.ts  package.json
(+39 files in other folders)
