[package]
name = "desktop"
version = "0.1.2"
description = "The Pathfinder desktop application"
authors = ["Grafbase"]
license = "MPL-2.0"
repository = "https://github.com/grafbase/pathfinder"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-close", "window-start-dragging", "window-maximize", "window-hide", "window-minimize", "window-show", "window-unminimize", "window-unmaximize", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
